Issue #24528: Improve error message for awaits in comprehensions